--- a/week08/tutorial/tb_visual1.css
+++ b/week08/tutorial/tb_visual1.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Visual Style Sheet for Tree and Book Family Home Page
-   Author: 
-   Date:   
+   Author: Mark Abell
+   Date:   08/14/2019
    
    Filename: tb_visual1.css
 
@@ -16,8 +16,23 @@
 
 /* Figure Box Styles */
 
+figure {
+   margin: 20px auto 0px;
+   width: 80%;
+}
 
+figure img {
+   display: block;
+   width: 100%;
+}
 
+figure figcaption {
+   background-color: white;
+   font-family: 'Palation Linotype', Palatino, 'Times New Roman', serif;
+   font-style: italic;
+   padding: 10px 0;
+   text-align: center;
+}
 
 /* HTML Styles */
 
