Linked Stylesheets to Genta.html

--- a/week08/tutorial/tb_visual1.css
+++ b/week08/tutorial/tb_visual1.css
@@ -32,7 +32,7 @@ figure img {
 
 figure figcaption {
    background-color: white;
-   font-family: 'Palation Linotype', Palatino, 'Times New Roman', serif;
+   font-family: 'Palatino Linotype', Palatino, 'Times New Roman', serif;
    font-style: italic;
    padding: 10px 0;
    text-align: center;
