--- a/week08/tutorial/tb_visual2.css
+++ b/week08/tutorial/tb_visual2.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Visual Effects Style Sheet for Photo Page at Tree and Book
-   Author:
-   Date:   
+   Author: Mark Abell
+   Date:   08/17/2019
    
    Filename: tb_visual2.css
 
