--- a/Index.css
+++ b/Index.css
@@ -3,11 +3,11 @@
 /* Header Styles */
 
 header h1 {
-    background-color: rgb(100,100,100)
+    background-color: #777777
 }
 
 /* Body Styles */
 
 body {
-    background-color: rgb()
+    background-color: #31a3c5
 }
