Linked stylesheets to homepage

--- a/week10/tutorial/tf_styles1.css
+++ b/week10/tutorial/tf_styles1.css
@@ -5,8 +5,8 @@
    Tutorial 5
    Tutorial Case
    
-   Author:   
-   Date:     
+   Author:   Mark Abell
+   Date:     08/25/2019
    
    Filename: tf_styles1.css
    
