hid the submenus

--- a/week10/tutorial/tf_styles1.css
+++ b/week10/tutorial/tf_styles1.css
@@ -144,6 +144,10 @@ body > footer {
 
 /* Pulldown Menu Styles */
 
+ul.submenu {
+   display: none;
+}
+
 /* New Styles Added Below */
 
 /* ==============================
