--- a/week10/tutorial/tf_styles1.css
+++ b/week10/tutorial/tf_styles1.css
@@ -145,11 +145,12 @@ body > footer {
 /* Pulldown Menu Styles */
 
 ul.submenu {
-   display: none;
+  display: none;
 }
 
-a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
-   display: block;
+a.submenuTitle:hover + ul.submenu,
+ul.submenu:hover {
+  display: block;
 }
 
 /* New Styles Added Below */
@@ -159,6 +160,14 @@ a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
    ==============================
    */
 @media only screen and (max-width: 480px) {
+  nav.horizontal a {
+    font-size: 1.5em;
+    line-height: 2.2em;
+  }
+
+  aside {
+    display: none;
+  }
 }
 
 /* =================================
