--- a/week10/tutorial/tf_styles1.css
+++ b/week10/tutorial/tf_styles1.css
@@ -175,6 +175,14 @@ ul.submenu:hover {
    =================================
    */
 @media only screen and (min-width: 481px) {
+  ul.mainmenu > li {
+    float: left;
+    width: 20%;
+  }
+
+  ul.submenu {
+    width: 200%;
+  }
 }
 
 /* ==============================
