--- a/week10/tutorial/tf_styles1.css
+++ b/week10/tutorial/tf_styles1.css
@@ -177,10 +177,13 @@ ul.submenu:hover {
 @media only screen and (min-width: 481px) {
   ul.mainmenu > li {
     float: left;
+    position:relative;
     width: 20%;
   }
 
   ul.submenu {
+     box-shadow: rgb(51,51,51) 5px 5px 15px;
+     position: absolute;
     width: 200%;
   }
 }
