--- a/week10/tutorial/tf_styles1.css
+++ b/week10/tutorial/tf_styles1.css
@@ -193,4 +193,21 @@ ul.submenu:hover {
    ==============================
    */
 @media only screen and (min-width: 769px) {
+   ul.submenu {
+      background: transparent;
+      box-shadow: none;
+      display: block;
+      position: relative;
+      width: 100%;
+   }
+   
+   nav.horizontal::after {
+      clear: both;
+      content: "";
+      display: table;
+   }
+
+   nav.horizontal a.submenuTitle {
+      display: none;
+   }
 }
