--- a/week10/tutorial/tf_styles1.css
+++ b/week10/tutorial/tf_styles1.css
@@ -210,4 +210,15 @@ ul.submenu:hover {
    nav.horizontal a.submenuTitle {
       display: none;
    }
+
+   article {
+      float:left;
+      margin-right: 5%;
+      width: 55%;
+   }
+
+   aside {
+      float: left;
+      width:40%;
+   }
 }
