--- a/week10/tutorial/tf_flex.css
+++ b/week10/tutorial/tf_flex.css
@@ -5,8 +5,8 @@
    Tutorial 5
    Tutorial Case
    
-   Author:   
-   Date:     
+   Author:   Mark Abell
+   Date:     08/25/2019
    
    Filename: tf_flex.css
    
@@ -21,8 +21,13 @@
    ================
 */
 
+body {
+   display: -webkit-flex;
+   display: flex;
 
-
+-webkit-flex-flow: row wrap;
+flex-flow: row wrap;
+}
 
 /* =========================
    Mobile Styles: 0 to 480px 
