--- a/week10/tutorial/tf_flex.css
+++ b/week10/tutorial/tf_flex.css
@@ -29,6 +29,20 @@ body {
 flex-flow: row wrap;
 }
 
+header,footer {
+   width: 100%;
+}
+
+aside {
+   -webkit-flex: 1 1 120px;
+   flex: 1 1 120px;
+}
+
+section#main {
+   -webkit-flex: 3 1 361px;
+   flex: 3 1 361px;
+}
+
 /* =========================
    Mobile Styles: 0 to 480px 
    =========================
