--- a/week10/tutorial/tf_flex.css
+++ b/week10/tutorial/tf_flex.css
@@ -15,32 +15,44 @@
 
 */
 
-
 /* ================
    Base Flex Styles
    ================
 */
 
 body {
-   display: -webkit-flex;
-   display: flex;
+  display: -webkit-flex;
+  display: flex;
 
--webkit-flex-flow: row wrap;
-flex-flow: row wrap;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
-header,footer {
-   width: 100%;
+header,
+footer {
+  width: 100%;
 }
 
 aside {
-   -webkit-flex: 1 1 120px;
-   flex: 1 1 120px;
+  -webkit-flex: 1 1 120px;
+  flex: 1 1 120px;
 }
 
 section#main {
-   -webkit-flex: 3 1 361px;
-   flex: 3 1 361px;
+  -webkit-flex: 3 1 361px;
+  flex: 3 1 361px;
+}
+
+section#topics {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+
+section#topics article {
+  -webkit-flex: 1 1 200px;
+  flex: 1 1 200px;
 }
 
 /* =========================
@@ -49,9 +61,6 @@ section#main {
 */
 
 @media only screen and (max-width: 480px) {
-  
-
- 
 }
 
 /* ============================================
@@ -60,9 +69,15 @@ section#main {
 */
 
 @media only screen and (min-width: 481px) {
+  nav.horizontal ul {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+  }
 
-
-
+  nav.horizontal li {
+    -webkit-flex: 1 1 auto;
+    flex: 1 1 auto;
+  }
 }
-
-
