--- a/week10/tutorial/tf_navicon.css
+++ b/week10/tutorial/tf_navicon.css
@@ -5,8 +5,8 @@
    Tutorial 5
    Tutorial Case
    
-   Author:   
-   Date:     
+   Author:   Mark Abell
+   Date:     08/25/2019
    
    Filename: tf_navicon.css
    
@@ -21,7 +21,9 @@
    ===========
 */
 
-
+a#navicon {
+   display: none;
+}
 
 
 /* ===============================
@@ -30,6 +32,17 @@
 */
 
 @media only screen and (max-width: 480px) {
+   
+   a#navicon {
+      display:block;
+   }
 
+   nav.horizontal ul {
+      display: none;
+   }
+
+   a#navicon:hover+ul, nav.horizontal ul:hover {
+      display: block;
+   }
    
 }
