--- a/week10/tutorial/tf_print.css
+++ b/week10/tutorial/tf_print.css
@@ -4,8 +4,8 @@
    Tutorial 5
    Tutorial Case
    
-   Author:   
-   Date:     
+   Author:   Mark Abell
+   Date:     08/25/2019
    
    Filename: tf_print.css
 
