updated CSS and HTML files

--- a/Index.css
+++ b/Index.css
@@ -9,5 +9,11 @@ header h1 {
 /* Body Styles */
 
 body {
-    background-color: #31a3c5
+    background-color: rgb(84, 199, 161)
+}
+
+/* Aside Styles */
+
+aside {
+    
 }
