Updated Index.html and tribute.html

--- a/Tribute.css
+++ b/Tribute.css
@@ -3,3 +3,14 @@
 body {
     background-color: rgb(126, 165, 184);
 }
+
+aside {
+    text-align: center;
+    float:right
+}
+
+footer {
+    text-align: center;
+    clear: both; 
+    background-color:rgb(64, 122, 151);
+}
