--- a/Final Exam/FinalExam.css
+++ b/Final Exam/FinalExam.css
@@ -6,3 +6,85 @@
             Files:       Final Exam.html and Final Exam.css
             Description: Revised index page / Final Exam
 */
+
+html {
+    background-color:rgb(20, 92, 68)
+}
+
+body {
+    font-family: Verdana, Tacoma, Helvetica, sans-serif;
+    font-size: 16pt;
+    color: black;
+    width: 85%;
+    margin: auto;
+    background-color: #13411e;
+}
+
+header h1 {
+    font-size: 36pt;
+    margin-top: 35px;
+    padding-top: 15px;
+    padding-left: 15px;
+    background-color: antiquewhite;
+}
+
+header h3 {
+    font-size: 24pt;
+    margin: 0px;
+    padding-bottom: 15px;
+    padding-left:15px;
+    background-color: antiquewhite;
+}
+
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22pt;
+    text-align: left;
+    letter-spacing: 2px;
+    margin: 2px;
+    padding: 15px 0px 0px 15px;
+    color: #250a0a
+}
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16pt;
+    text-align: left;
+    color: #1f2d38;
+}
+
+p {
+    margin: 15px;
+    padding: 15px;
+}
+
+nav.div {
+    height: 200px;
+    width:80%;
+}
+
+nav a:hover {
+    text-decoration: none;
+    color: rgb(29, 31, 158);
+    list-style-type:none;
+}
+
+table {
+    border:none;
+    padding-left:5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    width:80%;
+    margin-left: 30px;  
+}
+
+section {
+    background-color: rgb(164, 168, 168);
+    float:right;
+    width:80%;
+}
+
+section h3 {
+    text-align: center;
+}
